--- a/app/src/main/res/layout/card_pokemon_item.xml
+++ b/app/src/main/res/layout/card_pokemon_item.xml
@@ -15,9 +15,9 @@
         android:layout_marginBottom="4dp"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
+        android:elevation="4dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="1dp"
-        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reorder_icon"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,12 +34,12 @@
                 style="@style/Headline2DarkLeft"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="104dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:text="Pikachu"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_button"
-                app:layout_constraintStart_toEndOf="@+id/pokemon_image"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -47,12 +47,10 @@
                 style="@style/Headline3ColdGrayLeft"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
                 android:text="001"
-                app:layout_constraintEnd_toStartOf="@+id/favorite_button"
-                app:layout_constraintStart_toEndOf="@+id/pokemon_image"
+                app:layout_constraintEnd_toEndOf="@+id/pokemon_name"
+                app:layout_constraintStart_toStartOf="@+id/pokemon_name"
                 app:layout_constraintTop_toBottomOf="@+id/pokemon_name" />
 
             <TextView
@@ -70,6 +68,19 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:src="@drawable/image_initial_state"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ProgressBar
+                android:id="@+id/image_load_progressbar"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:padding="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
