Add Dagger Hilt for dependency injection

--- a/app/src/main/res/layout/card_pokemon_item.xml
+++ b/app/src/main/res/layout/card_pokemon_item.xml
@@ -37,7 +37,7 @@
                 android:layout_marginStart="104dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
-                android:text="Pikachu"
+                android:text="Pikachuuuuu"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="001"
+                android:text="999"
                 app:layout_constraintEnd_toEndOf="@+id/pokemon_name"
                 app:layout_constraintStart_toStartOf="@+id/pokemon_name"
                 app:layout_constraintTop_toBottomOf="@+id/pokemon_name" />
