--- a/app/src/main/res/layout/toolbar_search_old.xml
+++ b/app/src/main/res/layout/toolbar_search_old.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar_search_v2"
+    android:id="@+id/toolbar_search"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:background="@color/tint_primary"
-    android:elevation="4dp"
-    card_view:contentInsetStart="0dp">
+    card_view:contentInsetStart="0dp"
+    android:elevation="4dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -20,6 +20,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <EditText
+                android:id="@+id/text_search"
+                style="@style/InputTextColdGrayLeft"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="64dp"
+                android:layout_marginBottom="4dp"
+                android:background="@null"
+                android:hint="@string/hint_search"
+                android:inputType="text"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toEndOf="@+id/imageView"
+                card_view:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
@@ -31,26 +50,18 @@
                 card_view:layout_constraintTop_toTopOf="parent"
                 card_view:tint="@color/cold_gray" />
 
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/text_search"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="4dp"
+            <ImageView
+                android:id="@+id/button_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:paddingStart="-16dp"
-                android:paddingEnd="-16dp"
-                android:paddingBottom="2dp"
-                android:theme="@style/InputTextColdGrayLeft"
-                card_view:iconifiedByDefault="false"
-                card_view:layout_constraintBottom_toBottomOf="parent"
+                android:focusable="true"
+                android:src="@drawable/ic_close"
+                android:visibility="gone"
                 card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintStart_toEndOf="@+id/imageView"
                 card_view:layout_constraintTop_toTopOf="parent"
-                card_view:queryBackground="@android:color/transparent"
-                card_view:queryHint="@string/hint_search"
-                card_view:searchIcon="@null" />
+                card_view:tint="@color/cold_gray" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
