--- a/app/src/main/res/layout/card_pokemon_item.xml
+++ b/app/src/main/res/layout/card_pokemon_item.xml
@@ -6,8 +6,8 @@
     android:layout_height="96dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/city_card"
-        android:layout_width="match_parent"
+        android:id="@+id/pokemon_card"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
@@ -33,11 +33,11 @@
                 android:id="@+id/pokemon_name"
                 style="@style/Headline2DarkLeft"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_marginStart="104dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
-                android:text="Pikachuuuuu"
+                android:text="Pikachuuu"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -121,7 +121,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/city_card"
+        app:layout_constraintStart_toEndOf="@id/pokemon_card"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
