--- a/app/src/main/res/layout/layout_loading_failed.xml
+++ b/app/src/main/res/layout/layout_loading_failed.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <TextView
         style="@style/ButtonLabelErrorCenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="An Error Occured."
+        android:text="@string/an_error_occured"
         app:layout_constraintEnd_toEndOf="@+id/button_retry"
         app:layout_constraintStart_toStartOf="@+id/button_retry"
         app:layout_constraintTop_toBottomOf="@+id/button_retry" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_retry"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginTop="24dp"
-        android:text="Retry"
-        app:cornerRadius="12dp"
+        android:clickable="true"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/retry"
+        android:textAllCaps="true"
+        android:textColor="@color/tint_secondary"
+        app:cornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/tint_secondary"
+        app:strokeWidth="1.5dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
