--- a/app/src/main/res/layout/pokemon_item_load_state.xml
+++ b/app/src/main/res/layout/pokemon_item_load_state.xml
@@ -43,18 +43,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_retry"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Retry"
+                android:layout_height="36dp"
+                android:layout_marginTop="24dp"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
                 android:visibility="gone"
-                app:cornerRadius="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:clickable="true"
+                android:text="@string/retry"
+                android:textAllCaps="true"
+                android:textColor="@color/tint_secondary"
+                app:cornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:strokeColor="@color/tint_secondary"
+                app:strokeWidth="1.5dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
