--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/tint_primary_variant</item>
     </style>
 
-    <style name="Theme.Pokedex.PokemonActivity" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Pokedex.PokemonActivity" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/tint_primary_variant_pokemon</item>
@@ -25,6 +25,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/tint_primary_variant_pokemon</item>
     </style>
+
 
     <style name="BottomNavigationTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="colorPrimary">@color/tint_secondary</item>
