Add empty state for favorites RecyclerView with AdapterDataObserver

--- a/app/src/main/res/layout/layout_empty_state_search.xml
+++ b/app/src/main/res/layout/layout_empty_state_search.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/shocked_pikachu"
         android:layout_width="302dp"
         android:layout_height="388dp"
         android:src="@drawable/image_empty_state"
@@ -16,13 +16,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/text_empty"
         style="@style/Headline2DarkCenter"
         android:textColor="@color/cold_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/no_pokemons_found"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/shocked_pikachu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
