--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -19,38 +19,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ProgressBar
-        android:id="@+id/progress_bar_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />
-
         <include
-            android:id="@+id/empty_state_search"
-            layout="@layout/layout_empty_state"
+            android:id="@+id/empty_state_favorites"
+            layout="@layout/layout_empty_state_favorites"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="72dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_favorites" />
 
-        <include
-            android:id="@+id/error_state_search"
-            layout="@layout/layout_loading_failed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />
 
         <ImageView
             android:id="@+id/initial_state_search"
@@ -62,7 +42,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_favorites" />
 
 
         <androidx.recyclerview.widget.RecyclerView
