--- a/app/src/main/res/layout/pokemon_item_load_state.xml
+++ b/app/src/main/res/layout/pokemon_item_load_state.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="96dp">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/load_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,6 +14,8 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/tint_secondary"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:elevation="4dp"
@@ -49,13 +51,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginTop="24dp"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
-                android:visibility="gone"
-                android:clickable="true"
                 android:text="@string/retry"
                 android:textAllCaps="true"
                 android:textColor="@color/tint_secondary"
+                android:visibility="gone"
                 app:cornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +69,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
