--- a/app/src/main/res/layout/pokemon_item_load_state.xml
+++ b/app/src/main/res/layout/pokemon_item_load_state.xml
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/tint_secondary"
-        app:strokeWidth="1dp">
+        app:strokeWidth="2dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,20 +49,20 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:layout_marginTop="24dp"
                 android:backgroundTint="@color/white"
                 android:clickable="true"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
                 android:text="@string/retry"
                 android:textAllCaps="true"
-                android:textColor="@color/tint_secondary"
-                android:visibility="gone"
+                android:textColor="@color/error"
+                android:visibility="visible"
                 app:cornerRadius="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/tint_secondary"
+                app:strokeColor="@color/error"
                 app:strokeWidth="1.5dp" />
 
 
