--- a/app/src/main/res/layout/pokemon_item_load_state.xml
+++ b/app/src/main/res/layout/pokemon_item_load_state.xml
@@ -44,6 +44,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/load_fetching_tv"
+                android:layout_marginBottom="42dp"
+                style="@style/Headline3DarkCenter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fetching more Pokemon...."
+                android:textColor="@color/tint_secondary"
+                app:layout_constraintBottom_toBottomOf="@+id/load_progressbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/load_progressbar" />
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_retry"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -56,7 +69,7 @@
                 android:text="@string/retry"
                 android:textAllCaps="true"
                 android:textColor="@color/error"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:cornerRadius="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
