--- a/app/src/main/res/layout/card_pokemon_item.xml
+++ b/app/src/main/res/layout/card_pokemon_item.xml
@@ -67,9 +67,10 @@
                 android:id="@+id/favorite_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="36dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="32dp"
+                android:padding="4dp"
                 android:clickable="true"
                 android:src="@drawable/ic_star_0"
                 app:layout_constraintBottom_toBottomOf="parent"
