--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -24,26 +24,14 @@
             layout="@layout/layout_empty_state_favorites"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="72dp"
-            android:visibility="visible"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="72dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar_favorites" />
-
-
-        <ImageView
-            android:id="@+id/initial_state_search"
-            android:layout_width="294dp"
-            android:layout_height="427dp"
-            android:layout_marginBottom="48dp"
-            android:src="@drawable/image_initial_state"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_favorites" />
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_favorites"
