--- a/app/src/main/res/drawable/ic_arrow_drop_down.xml
+++ b/app/src/main/res/drawable/ic_arrow_drop_down.xml
@@ -4,9 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M7,10l5,5l5,-5z"
-      android:strokeWidth="1"
+      android:pathData="M10,17L15,12 10,7z"
       android:fillColor="#1C1F22"
-      android:fillType="evenOdd"
-      android:strokeColor="#00000000"/>
+      android:fillType="evenOdd"/>
 </vector>
