--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.rafaelboban.pokedex.ui.FavoritesFragment"
+    tools:context="com.rafaelboban.pokedex.ui.bottom_nav.FavoritesFragment"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
